--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             setTimeout(function appNotInstalled() {
                 window.location.replace("https://ssebro.github.io/animated-winner/not-installed");
             }, 100);
-            window.location.replace("mfp://food/diary");
+            window.location.replace("intent:food/diary#Intent;scheme=mfp;end");
         };
         window.onload = redirectToApp;
     </script>
