--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             setTimeout(function appNotInstalled() {
                 window.location.replace("https://ssebro.github.io/animated-winner/not-installed");
             }, 3000);
-            window.location.replace("intent://food/diary#Intent;scheme=mfp;end");
+            window.location.replace("intent:#Intent;scheme=mfp;end");
 
         };
         window.onload = redirectToApp;
